# backend/Controllers/NodosController.cs
@@ -1,6 +1,7 @@
 ﻿using BoleteriaOnline.Core.Services;
 using BoleteriaOnline.Core.Utils;
-using BoleteriaOnline.Core.ViewModels.Requests;
+using BoleteriaOnline.Core.ViewModels;
+using BoleteriaOnline.Core.ViewModels.Filters;
 using BoleteriaOnline.Core.ViewModels.Responses;
 using BoleteriaOnline.Web.Extensions.Response;
 using Microsoft.AspNetCore.Mvc;
@@ -21,9 +22,9 @@ public class NodosController : ControllerBase
     [HttpGet]
     [ProducesResponseType(StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
-    public async Task<ActionResult<WebResult<ICollection<NodoResponse>>>> GetAll()
+    public async Task<ActionResult<WebResult<ICollection<NodoDTO>>>> GetAll()
     {
-        var nodos = await _nodoservice.GetNodosAsync();
+        var nodos = await _nodoservice.AllPaginatedAsync(new NodoFilter());
 
         if (!nodos.Success)
             return StatusCode(ResponseHelper.GetHttpError(nodos.ErrorCode), nodos);
@@ -35,9 +36,9 @@ public class NodosController : ControllerBase
     [ProducesResponseType(StatusCodes.Status200OK)]
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
-    public async Task<ActionResult<WebResult<NodoResponse>>> Get(long id)
+    public async Task<ActionResult<WebResult<NodoDTO>>> Get(int id)
     {
-        var nodo = await _nodoservice.GetNodoAsync(id);
+        var nodo = await _nodoservice.GetAsync(new NodoFilter() { Id = id});
 
         if (!nodo.Success)
             return StatusCode(ResponseHelper.GetHttpError(nodo.ErrorCode), nodo);
@@ -50,20 +51,20 @@ public class NodosController : ControllerBase
     [ProducesResponseType(StatusCodes.Status400BadRequest)]
     [ProducesResponseType(StatusCodes.Status404NotFound)]
     [ProducesResponseType(StatusCodes.Status201Created)]
-    public async Task<ActionResult<WebResult<NodoResponse>>> CreateNodo([FromBody] NodoRequest nodoDto)
+    public async Task<ActionResult<WebResult<NodoDTO>>> CreateNodo([FromBody] NodoDTO nodoDto)
     {
-        var nodo = await _nodoservice.CreateNodoAsync(nodoDto);
+        var nodo = await _nodoservice.CreateAsync(nodoDto);
 
         if (!nodo.Success)
             return StatusCode(ResponseHelper.GetHttpError(nodo.ErrorCode), nodo);
         return Created(nameof(Get), nodo);
     }
 
-    [HttpPatch]
+    [HttpPatch("{id:int}")]
     [ProducesResponseType(StatusCodes.Status200OK)]
-    public async Task<ActionResult<WebResult<NodoResponse>>> UpdateNodo([FromBody] NodoRequest nodoDto)
+    public async Task<ActionResult<WebResult<NodoDTO>>> UpdateNodo([FromBody] NodoDTO nodoDto, int id)
     {
-        var nodo = await _nodoservice.UpdateNodoAsync(nodoDto);
+        var nodo = await _nodoservice.UpdateAsync(nodoDto, id);
 
         if (!nodo.Success)
             return StatusCode(ResponseHelper.GetHttpError(nodo.ErrorCode), nodo);
@@ -72,9 +73,9 @@ public class NodosController : ControllerBase
 
     [HttpDelete]
     [ProducesResponseType(StatusCodes.Status200OK)]
-    public async Task<ActionResult<WebResult<NodoResponse>>> DeleteNodo(long id)
+    public async Task<ActionResult<WebResult<NodoDTO>>> DeleteNodo(int id)
     {
-        var nodo = await _nodoservice.DeleteNodoAsync(id);
+        var nodo = await _nodoservice.DeleteAsync(new NodoFilter() { Id = id});
 
         if (!nodo.Success)
             return StatusCode(ResponseHelper.GetHttpError(nodo.ErrorCode), nodo);
